--- a/EnergyMonitor.ioc
+++ b/EnergyMonitor.ioc
@@ -4,14 +4,21 @@ ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.EnableAnalogWatchDog=false
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,AutoInjectedConv,InjectedDiscontinuousConvMode,Mode,ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ExternalTrigConv
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,AutoInjectedConv,InjectedDiscontinuousConvMode,Mode,ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ExternalTrigConv,Resolution,DataAlign,ScanConvMode,DiscontinuousConvMode,NbrOfConversion,ExternalTrigConvEdge,EnableAnalogWatchDog
 ADC1.InjectedDiscontinuousConvMode=DISABLE
 ADC1.Mode=ADC_DUALMODE_REGSIMULT
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.ScanConvMode=DISABLE
 ADC1.master=1
 ADC2.AutoInjectedConv=DISABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_7
@@ -24,36 +31,49 @@ ADC2.Mode=ADC_DUALMODE_REGSIMULT
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.ADC1.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.ADC1.0.Instance=DMA2_Stream0
-Dma.ADC1.0.MemBurst=DMA_MBURST_SINGLE
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.ADC2.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.ADC2.1.Instance=DMA2_Stream2
-Dma.ADC2.1.MemBurst=DMA_MBURST_SINGLE
-Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.1.Mode=DMA_CIRCULAR
-Dma.ADC2.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.1.Priority=DMA_PRIORITY_MEDIUM
-Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC1.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.ADC1.3.Instance=DMA2_Stream0
+Dma.ADC1.3.MemBurst=DMA_MBURST_SINGLE
+Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.3.Mode=DMA_CIRCULAR
+Dma.ADC1.3.PeriphBurst=DMA_PBURST_SINGLE
+Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.3.Priority=DMA_PRIORITY_HIGH
+Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC2.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.ADC2.0.Instance=DMA2_Stream2
+Dma.ADC2.0.MemBurst=DMA_MBURST_SINGLE
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_CIRCULAR
+Dma.ADC2.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Priority=DMA_PRIORITY_HIGH
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.MEMTOMEM.1.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.MEMTOMEM.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.MEMTOMEM.1.Instance=DMA2_Stream1
+Dma.MEMTOMEM.1.MemBurst=DMA_MBURST_SINGLE
+Dma.MEMTOMEM.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.MEMTOMEM.1.MemInc=DMA_MINC_ENABLE
+Dma.MEMTOMEM.1.Mode=DMA_NORMAL
+Dma.MEMTOMEM.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.MEMTOMEM.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.MEMTOMEM.1.PeriphInc=DMA_PINC_ENABLE
+Dma.MEMTOMEM.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.MEMTOMEM.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.MEMTOMEM.2.Direction=DMA_MEMORY_TO_MEMORY
 Dma.MEMTOMEM.2.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.MEMTOMEM.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.2.Instance=DMA2_Stream1
+Dma.MEMTOMEM.2.Instance=DMA2_Stream3
 Dma.MEMTOMEM.2.MemBurst=DMA_MBURST_SINGLE
 Dma.MEMTOMEM.2.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.MEMTOMEM.2.MemInc=DMA_MINC_ENABLE
@@ -63,23 +83,10 @@ Dma.MEMTOMEM.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.MEMTOMEM.2.PeriphInc=DMA_PINC_ENABLE
 Dma.MEMTOMEM.2.Priority=DMA_PRIORITY_MEDIUM
 Dma.MEMTOMEM.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.MEMTOMEM.3.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.MEMTOMEM.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.3.Instance=DMA2_Stream3
-Dma.MEMTOMEM.3.MemBurst=DMA_MBURST_SINGLE
-Dma.MEMTOMEM.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.MEMTOMEM.3.MemInc=DMA_MINC_ENABLE
-Dma.MEMTOMEM.3.Mode=DMA_NORMAL
-Dma.MEMTOMEM.3.PeriphBurst=DMA_PBURST_SINGLE
-Dma.MEMTOMEM.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.3.PeriphInc=DMA_PINC_ENABLE
-Dma.MEMTOMEM.3.Priority=DMA_PRIORITY_MEDIUM
-Dma.MEMTOMEM.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=ADC1
-Dma.Request1=ADC2
+Dma.Request0=ADC2
+Dma.Request1=MEMTOMEM
 Dma.Request2=MEMTOMEM
-Dma.Request3=MEMTOMEM
+Dma.Request3=ADC1
 Dma.RequestsNb=4
 File.Version=6
 KeepUserPlacement=true
@@ -245,7 +252,7 @@ SH.ADCx_IN6.ConfNb=1
 SH.ADCx_IN7.0=ADC2_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
 TIM8.IPParameters=Period,TIM_MasterOutputTrigger
-TIM8.Period=35000
+TIM8.Period=7000
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART2.BaudRate=9600
 USART2.HwFlowCtl-Asynchronous=UART_HWCONTROL_NONE
