--- a/EnergyMonitor.ioc
+++ b/EnergyMonitor.ioc
@@ -23,70 +23,77 @@ ADC1.master=1
 ADC2.AutoInjectedConv=DISABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_7
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC2.ContinuousConvMode=DISABLE
 ADC2.DMAContinuousRequests=ENABLE
+ADC2.DataAlign=ADC_DATAALIGN_RIGHT
+ADC2.DiscontinuousConvMode=DISABLE
 ADC2.EOCSelection=ADC_EOC_SEQ_CONV
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,AutoInjectedConv,InjectedDiscontinuousConvMode,Mode,ClockPrescaler,EOCSelection,DMAContinuousRequests
+ADC2.EnableAnalogWatchDog=false
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,AutoInjectedConv,InjectedDiscontinuousConvMode,Mode,ClockPrescaler,EOCSelection,DMAContinuousRequests,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,NbrOfConversion,EnableAnalogWatchDog
 ADC2.InjectedDiscontinuousConvMode=DISABLE
 ADC2.Mode=ADC_DUALMODE_REGSIMULT
+ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.Resolution=ADC_RESOLUTION_12B
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.ADC1.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.ADC1.3.Instance=DMA2_Stream0
-Dma.ADC1.3.MemBurst=DMA_MBURST_INC4
-Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.3.Mode=DMA_CIRCULAR
-Dma.ADC1.3.PeriphBurst=DMA_PBURST_INC4
-Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.3.Priority=DMA_PRIORITY_HIGH
-Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.ADC2.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.ADC2.0.Instance=DMA2_Stream2
-Dma.ADC2.0.MemBurst=DMA_MBURST_INC4
-Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.0.Mode=DMA_CIRCULAR
-Dma.ADC2.0.PeriphBurst=DMA_PBURST_INC4
-Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.0.Priority=DMA_PRIORITY_HIGH
-Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+ADC2.ScanConvMode=DISABLE
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC1.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.ADC1.2.Instance=DMA2_Stream0
+Dma.ADC1.2.MemBurst=DMA_MBURST_SINGLE
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_CIRCULAR
+Dma.ADC1.2.PeriphBurst=DMA_PBURST_SINGLE
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Priority=DMA_PRIORITY_HIGH
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.ADC2.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC2.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.ADC2.3.Instance=DMA2_Stream2
+Dma.ADC2.3.MemBurst=DMA_MBURST_SINGLE
+Dma.ADC2.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC2.3.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.3.Mode=DMA_CIRCULAR
+Dma.ADC2.3.PeriphBurst=DMA_PBURST_SINGLE
+Dma.ADC2.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC2.3.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.3.Priority=DMA_PRIORITY_HIGH
+Dma.ADC2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.MEMTOMEM.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.MEMTOMEM.0.Instance=DMA2_Stream1
+Dma.MEMTOMEM.0.MemBurst=DMA_MBURST_SINGLE
+Dma.MEMTOMEM.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.MEMTOMEM.0.MemInc=DMA_MINC_ENABLE
+Dma.MEMTOMEM.0.Mode=DMA_NORMAL
+Dma.MEMTOMEM.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.MEMTOMEM.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.MEMTOMEM.0.PeriphInc=DMA_PINC_ENABLE
+Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.MEMTOMEM.1.Direction=DMA_MEMORY_TO_MEMORY
 Dma.MEMTOMEM.1.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.MEMTOMEM.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.1.Instance=DMA2_Stream1
-Dma.MEMTOMEM.1.MemBurst=DMA_MBURST_INC4
+Dma.MEMTOMEM.1.Instance=DMA2_Stream3
+Dma.MEMTOMEM.1.MemBurst=DMA_MBURST_SINGLE
 Dma.MEMTOMEM.1.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.MEMTOMEM.1.MemInc=DMA_MINC_ENABLE
 Dma.MEMTOMEM.1.Mode=DMA_NORMAL
-Dma.MEMTOMEM.1.PeriphBurst=DMA_PBURST_INC4
+Dma.MEMTOMEM.1.PeriphBurst=DMA_PBURST_SINGLE
 Dma.MEMTOMEM.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.MEMTOMEM.1.PeriphInc=DMA_PINC_ENABLE
 Dma.MEMTOMEM.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.MEMTOMEM.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.MEMTOMEM.2.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.2.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.MEMTOMEM.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.2.Instance=DMA2_Stream3
-Dma.MEMTOMEM.2.MemBurst=DMA_MBURST_INC4
-Dma.MEMTOMEM.2.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.MEMTOMEM.2.MemInc=DMA_MINC_ENABLE
-Dma.MEMTOMEM.2.Mode=DMA_NORMAL
-Dma.MEMTOMEM.2.PeriphBurst=DMA_PBURST_INC4
-Dma.MEMTOMEM.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.2.PeriphInc=DMA_PINC_ENABLE
-Dma.MEMTOMEM.2.Priority=DMA_PRIORITY_MEDIUM
-Dma.MEMTOMEM.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=ADC2
+Dma.Request0=MEMTOMEM
 Dma.Request1=MEMTOMEM
-Dma.Request2=MEMTOMEM
-Dma.Request3=ADC1
+Dma.Request2=ADC1
+Dma.Request3=ADC2
 Dma.RequestsNb=4
 File.Version=6
 KeepUserPlacement=true
